<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">userandpassword</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">用户名:</string>
    <string name="Password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="Remember">记住密码</string>
    <string name="Login">登&#160;陆</string>
    <string name="Cancel">取&#160;消</string>

</resources>
